fixed some mistakes

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <h1 class="introHeading">Киноман - портал от любителей кино</h1>
             <p class="introSlogan">Присоединись к сообществу. 
                 Читай реценсии, смотри рейтинг фильмов,
-                 узнай историю самых лучших режисеров</p>
+                 узнай историю самых лучших режиссеров</p>
             <a href="./auth.html" class="createAccount">Создать аккаунт</a>
         </section>
         <section class="films">
-            <h2 class="filmsHeading">Фильмы вошедшие в историю</h2>
+            <h2 class="filmsHeading">Фильмы, вошедшие в историю</h2>
             <div class="filmsContainer">
                 <div class="film">
                     <img src="./img/mainPage/films/1.png" alt="" class="filmImg">
