--- a/film.html
+++ b/film.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/footer.css">
     <link rel="stylesheet" href="./styles/mainPage/mainStyle.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=JetBrains+Mono:wght@100&family=Open+Sans:wght@500&family=Oswald:wght@500&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
