--- a/directors.html
+++ b/directors.html
@@ -21,7 +21,7 @@
         <a href="./account.html" class="accountsPage">Аккаунт</a>
     </header>
     <main>
-        <h1>Список доступных режиссеров</h1>
+        <h1>Отечественные режиссеры</h1>
         <input type="text" class="searchDirector" placeholder="Поиск режиссера ">
         <div class="director">
             <h2 class="directorName">Леонид Гайдай</h2>
