--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <button class="watchMoreFilms">Смотреть еще</button>
         </section>
         <section class="directors">
-            <h2 class="directorsHeading">Главные режиссеры</h2>
+            <h2 class="directorsHeading">Зарубежные режиссеры</h2>
             <div class="directorsContainer">
                <div class="director" id="first">
                 <div class="directorTitle">
